# corpguard-bench

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run_battle.py
scenarios/corpguard/: corpguard_judge.py  scenario.toml
scenarios/corpguard/corpguard_judge.py</: path
src/conductor_mcp_server/: elicitation.py  main.py  models.py  security.py
