[project]
name = "corpguard-fastapi"
version = "1.0.0"
description = "CorpGuard FastAPI Security System"
authors = [
    {name = "Senior Python Architect", email = "architect@corpguard.com"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "agentbeats"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
